# swaylend-monorepo

./: .gitignore  .npmrc  Cargo.toml  DEPLOYMENTS.md  Forc.toml  LICENSE  README.md  biome.json  fuel-toolchain.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.changeset/: blue-monkeys-hug.md  brave-planets-marry.md  config.json  early-mayflies-kiss.md  early-planets-thank.md  fair-cars-sleep.md  famous-pigs-smoke.md  fifty-phones-fix.md  gentle-rockets-sniff.md  giant-ravens-drop.md  great-years-promise.md  late-geckos-unite.md  light-garlics-notice.md  loud-cougars-admire.md  mean-taxis-sniff.md  rotten-walls-shave.md  slow-cobras-accept.md  twelve-mice-dress.md
.github/workflows/: ci.yml  release-dapp.yml  release-main.yml  sync-develop.yml  sync.yml
abis/market_abi/: Forc.toml
abis/market_abi/src/: abi.sw  structs.sw
apps/frontend/: .env.example  CHANGELOG.md  CNAME  README.md  codegen.ts  craco.config.js  next.config.js  package.json  svgr.d.ts  tsconfig.json  vercel.json
apps/frontend-v2/: .env  .env.example  LICENSE  codegen.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/frontend-v2/src/: middleware.ts
apps/frontend-v2/src/app/: globals.css  layout.tsx  (+3 more)
apps/frontend/config/: env.js  getHttpsConfig.js  modules.js  paths.js  webpack.config.js  webpackDevServer.config.js
apps/frontend/public/: index.html  manifest.json
apps/frontend/scripts/: build.js  getBalanceOf.ts  start.js  test.js
apps/frontend/src/: App.tsx  index.css  index.tsx  middleware.ts  providers.tsx
apps/indexer/: README.md  config.mainnet.usdc.yaml  config.testnet.usdc-mock.yaml  config.testnet.usdc.yaml  config.testnet.usdt.yaml  config.usdc-mock.yaml  config.usdt.yaml  config.yaml  package.json  pnpm-lock.yaml  schema.graphql  tsconfig.json
apps/indexer-sentio/: README.md  package.json  sentio.yaml  store.graphql
apps/indexer-sentio/queries/: base_value_daily_historical.sql  base_value_historical.sql  base_value_hourly_historical.sql  collateral_value_daily_historical.sql  collateral_value_historical.sql  collateral_value_hourly_historical.sql  events.sql  markets_combined_daily_historical.sql  pool.sql  pool_snapshots.sql  pools.sql  position_snapshots.sql  single_market_daily_historical.sql
apps/indexer-sentio/src/: constants.ts  processor.ts
apps/indexer/abi/: market-abi.json
apps/indexer/src/: EventHandlers.ts
apps/indexer/test/: tests.spec.ts
apps/oracle/: Cargo.toml  Dockerfile  README.md
apps/oracle/src/: main.rs
contracts/market/: Cargo.toml  Forc.toml  README.md
contracts/market/core/: contract_types.rs
contracts/market/scripts/: activate_market.rs  change_proxy_owner.rs  deploy_market.rs
contracts/market/src/: events.sw  main.sw
contracts/market/tests/: config.json  harness.rs  tokens.json
contracts/market/tests/local_tests/: main_test_uni.rs  main_test_uni_no_debug_mode.rs  main_test_usdt.rs  mod.rs
contracts/market/tests/local_tests/functions/: base_asset.rs  mod.rs  pause.rs
contracts/market/tests/local_tests/scenarios/: collateral_borrow.rs  configuration.rs  governor.rs  liquidation.rs  mod.rs  multicall_absorb_buy_collateral.rs  multicall_withdraw_supply.rs  negative_reserves.rs  owner.rs  pause.rs  price_changes.rs  reserves.rs  rewards.rs  supply_withdraw.rs  update_curve_parameters.rs  utilization.rs
contracts/market/tests/scripts/: deploy.rs  deploy_tokens.rs  mint_tokens.rs  mod.rs
contracts/market/tests/utils/: mod.rs  number_utils.rs
contracts/market/tests/utils/contracts_utils/: market_utils.rs  mod.rs  token_utils.rs
contracts/pyth-mock/: Cargo.toml  Forc.toml
contracts/pyth-mock/core/: contract_types.rs
contracts/pyth-mock/src/: lib.rs  main.sw
contracts/pyth-mock/tests/: harness.rs
contracts/pyth-mock/tests/scripts/: deploy.rs
contracts/src-20/: Cargo.toml  Forc.toml
contracts/src-20/scripts/: deploy.rs
contracts/src-20/src/: main.sw
contracts/test/: Cargo.toml  Forc.toml
contracts/test/src/: main.sw  test.sw
contracts/test/tests/: harness.rs
contracts/token/: Cargo.toml  Forc.toml
contracts/token/core/: contract_types.rs  lib.rs
contracts/token/src/: main.sw
docs/: README.md  SUMMARY.md  collateral-and-borrowing.md  interest-rates.md  risks.md
docs/developers/: contract-methods.md
docs/developers/contract-overview/: contract-methods.md  contract-storage.md
docs/get-started-on-fuel/: create-wallet.md  top-up-wallet.md
docs/welcome/: team.md
docs/welcome/faq/: borrowing.md  liquidations.md  supplying-and-earning.md
libs/i256/: Forc.toml
libs/i256/src/: main.sw
libs/market_sdk/: Cargo.toml
libs/market_sdk/src/: lib.rs  market_utils.rs  number_utils.rs
libs/pyth_mock_sdk/: Cargo.toml
libs/pyth_mock_sdk/src/: lib.rs
libs/src20_sdk/: Cargo.toml  tokens.json
libs/src20_sdk/src/: token_utils.rs
libs/src20_sdk/tests/: harness.rs
libs/token_sdk/: Cargo.toml  tokens-mock.testnet.json  tokens.2.json  tokens.devnet.json  tokens.json  tokens.testnet.json
libs/token_sdk/src/: lib.rs  token_asset_utils.rs  token_utils.rs  utils.rs
libs/token_sdk/tests/: harness.rs
patches/: @fuel-ts__account@0.94.3.patch  @pythnetwork__pyth-fuel-js@1.0.4.patch
scripts/: .env.example  Cargo.toml  README.md
scripts/configs/: devnet_usdc_config.json  devnet_usdc_mock_config.json  mainnet_usdc_config.json  testnet_usdc_config.json  testnet_usdc_mock_config.json  testnet_usdt_config.json
scripts/devnet/: README.md  deploy_contracts.sh  mint_tokens.sh  run.sh  setup-devnet.sh  start_oracle.sh
scripts/devnet/chain_config/: chain_config.json  state_config.json
scripts/market/: activate_market.rs  upgrade_market.rs
scripts/src/: activate_market.rs  change_market_owner.rs  change_proxy_owner.rs  deploy_pyth.rs  deploy_tokens.rs  fill_reserves.rs  mint_tokens.rs  update_collateral_assets.rs  utils.rs  withdraw_reserves.rs
scripts/testnet/: README.md  deploy_market.sh  deploy_mock_oracle.sh  deploy_tokens.sh  mint_tokens.sh  start_frontend.sh  start_oracle.sh
scripts/tokens/: configure_tokens.rs  mint_tokens.rs
(+466 files in other folders)
