[workspace]
members = [
    # Apps
    "apps/oracle",
    # Contracts (types)
    "contracts/market",
    "contracts/pyth-mock",
    "contracts/token",
    # Libs
    "libs/market_sdk",
    "libs/token_sdk",
    "libs/pyth_mock_sdk",
    # Test
    "contracts/test",
]
resolver = "2"

[workspace.dependencies]
# Local SDKs
market_sdk = { path = "libs/market_sdk" }
token_sdk = { path = "libs/token_sdk" }
pyth_mock_sdk = { path = "libs/pyth_mock_sdk" }

# Local contracts (types)
pyth_mock = { path = "contracts/pyth-mock" }
market = { path = "contracts/market" }
token = { path = "contracts/token" }

# External
pyth_sdk = { git = "https://github.com/pyth-network/pyth-crosschain", rev = "f41782f005f4bf99b8f765214b91b1397bc7c39b" }
tokio = { version = "1.12", features = ["full"] }
fuels = { version = "0.65.1", features = ["fuel-core-lib"] }
dotenv = "0.15.0"
serde = "1.0.197"
serde_json = "1.0.114"
reqwest = "0.11.20"
rand = "0.8.5"
chrono = "0.4.38"
anyhow = "1.0.86"
