[workspace]
members = [
    # Apps
    "apps/oracle",
    # Contracts (types)
    "contracts/market",
    "contracts/src-20",
    "contracts/pyth-mock",
    "contracts/token",
    # Libs
    "libs/market_sdk",
    "libs/token_sdk",
    "libs/pyth_mock_sdk",
    # Test
    "contracts/test",
]
resolver = "2"

[workspace.package]
rust-version = "1.79.0"

[workspace.dependencies]
# Local SDKs
market_sdk = { path = "libs/market_sdk" }
token_sdk = { path = "libs/token_sdk" }
pyth_mock_sdk = { path = "libs/pyth_mock_sdk" }

# Local contracts (types)
pyth_mock = { path = "contracts/pyth-mock" }
market = { path = "contracts/market" }
token = { path = "contracts/token" }

# External
pyth_sdk = { git = "https://github.com/pyth-network/pyth-crosschain", rev = "aa9509ccd37cf5dc73fee891a5730c351d15235f" }
tokio = { version = "1.12", features = ["full"] }
fuels = { version = "0.66.2", features = ["fuel-core-lib"] }
dotenv = "0.15.0"
serde = "1.0.197"
serde_json = "1.0.114"
reqwest = "0.11.20"
rand = "0.8.5"
chrono = "0.4.38"
anyhow = "1.0.86"
