[package]
name = "swaylend-scripts"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "activate_market"
path = "market/activate_market.rs"

[[bin]]
name = "change_proxy_owner"
path = "market/change_proxy_owner.rs"

[[bin]]
name = "upgrade_market"
path = "market/upgrade_market.rs"

[[bin]]
name = "configure_tokens"
path = "tokens/configure_tokens.rs"

[[bin]]
name = "mint_tokens"
path = "tokens/mint_tokens.rs"

[[bin]]
name = "bootstrap_collateral"
path = "market/bootstrap_collateral.rs"

[dependencies]
fuels = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
market_sdk = { workspace = true }
token_sdk = { workspace = true }
pyth_mock_sdk = { workspace = true }
pyth_sdk = { workspace = true }
dotenv = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tai64 = { workspace = true }
