[package]
name = "swaylend-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
market_sdk = { workspace = true }
pyth_sdk = { workspace = true }
fuels = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4.3"
