[package]
name = "market"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
path = "core/lib.rs"

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
fuels = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
market_sdk = { workspace = true }
token_sdk = { workspace = true }
pyth_mock_sdk = { workspace = true }
pyth_sdk = { workspace = true }
dotenv = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tai64 = { workspace = true }
