[package]
name = "pyth_mock"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
path = "core/lib.rs"

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
fuels = { workspace = true }

[dev-dependencies]
pyth_mock_sdk = { workspace = true }
pyth_sdk = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
