[package]
name = "token_sdk"
description = ""
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
token = { workspace = true }
pyth_mock = { workspace = true }
market = { workspace = true }
fuels = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

sha2 = "0.10.8"
tai64 = "4.0.0"
