[package]
name = "token_sdk"
description = ""
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
token = { workspace = true }
market = { workspace = true }
fuels = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }

sha2 = "0.10.8"

[dev-dependencies]
tokio = { workspace = true }
